--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div>
-            <span></span>
-            <img src="img/Logo.svg" alt="Logo da Alurabooks">
+    <header class="cabeçalho">
+        <div class="container">
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         </div>
         <div>
-            <a href="#"><img src="img/Favoritos.svg" alt="container_imagem"></a>
-            <a href="#"><img src="img/Compras.svg" alt="container_imagem"></a>
-            <a href="#"><img src="img/Usuário.svg" alt="container_imagem"></a>
-
+            <a href="#"><img src="img/Favoritos.svg" alt="container_imagem" class="container__imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt="container_imagem" class="container__imagem"></a>
+            <a href="#"><img src="img/Usuário.svg" alt="container_imagem" class="container__imagem"></a>
         </div>
     </header>
     
