--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            </label>
+
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categorias</li>
+                <li class="lista-menu__item">
+                   <a href="#" class="lista-menu__link">Aventura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Biografia</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Ficção Científica</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Romance</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Vestibular</a>
+                </li>
+         </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         </div>
         <div>
@@ -22,3 +44,4 @@
     
 </body>
 </html>
+
